--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,12 @@
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next": "15.5.5",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "use-toast-notification": "^0.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
